<!--
strings.xml

The strings here are used all over the Score Tracker application.

Created by John Steel on 2015-10-31.
-->
<resources>
    <string name="app_name">Jumbotron</string>
    <string name="title_activity_settings">Jumbotron Settings</string>
    <string name="title_player_detail">Contestant Detail</string>
    <string name="points">Points</string>
    <string name="losses">Losses</string>
    <string name="wins">Wins</string>
    <string name="ties">Ties</string>
    <string name="name">Name</string>
    <string name="unknown">Unknown</string>
    <string name="timeout">Timed out when refreshing contestants.</string>
    <string name="player_refresh_running">Refresh already running!</string>
    <string name="player_delete_confirmation">Are you sure you want to delete %s?</string>
    <string name="player_delete">Delete</string>
    <string name="player_rename">Rename</string>
    <string name="cancel_delete">Cancel</string>

    <!-- Settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="title_activity_game_emulator">GameEmulator</string>
    <string name="action_settings">Settings</string>


    <string name="player_two">Contestant Two</string>
    <string name="player_one">Contestant One</string>
    <string name="refresh">Refresh</string>
    <string name="refresh_local">Reloading data from device...</string>
    <string name="refresh_remote">Reloading data from the web...</string>
    <string name="title_activity_list_teams">ListTeams</string>
    <string name="title_activity_team_detail">TeamDetailActivity</string>

    <!-- Added on 2015-12-08 -->
    <string name="game_emulator_player_score">%s +1 Point</string>
    <string name="game_emulator_player_minus">%s -1 Point</string>

    <string name="game_emulator_start_scratch">Start From Scratch Again</string>
    <string name="game_emulator_reset_game">Finish Current Game And Start New</string>
    <string name="is_a_tie">Is A Tie</string>
    <string name="won">Won</string>

    <!-- Added on 2015-12-08. Removing literals from code -->
    <string name="deleted">(Deleted)</string>
    <string name="enter">Enter</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="team">Team</string>
    <string name="player">Player</string>
    <string name="rename">Rename</string>
    <string name="dont_rename">Dont Rename</string>
    <string name="select_an_opponent">Select an opponent</string>
    <string name="new_name_invalid">The selected new name was invalid or used</string>
    <string name="all_players_deleted">All players were deleted</string>
    <string name="new_contestant">New Contestant</string>

    <!-- Cast Related -->
    <string name="app_id">EA80F3A2</string>
    <string name="namespace">urn:x-cast:com.steelcomputers.cast.jumbotron</string>
    <string name="cast_to_device">Cast to Device</string>
</resources>
