<!--
fragment_game_emulator.xml

This is the layout for the game emulator fragment.

Created by John Steel on 2015-11-02 from a template.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.steelcomputers.android.assignmenttwo.GameEmulatorFragment">

    <Button
        android:id="@+id/player_one_wins"
        android:text="@string/game_emulator_player_wins"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/player_two_wins"
        android:text="@string/game_emulator_player_wins"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/draw"
        android:text="@string/game_emulator_draw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
        <TableLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:stretchColumns="0">
            <TableRow android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView style="@style/TableHeader" android:text="@string/name" />
                <TextView style="@style/TableHeader" android:text="@string/wins" />
                <TextView style="@style/TableHeader" android:text="@string/ties" />
                <TextView style="@style/TableHeader" android:text="@string/losses" />
            </TableRow>
            <TableRow android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:id="@+id/playerOneName" style="@style/TableHeader" android:text="@string/player_one" />
                <TextView android:id="@+id/playerOneWins" style="@style/TableData" />
                <TextView android:id="@+id/playerOneTies" style="@style/TableData" />
                <TextView android:id="@+id/playerOneLoss" style="@style/TableData" />
            </TableRow>
            <TableRow android:layout_width="match_parent" android:layout_height="wrap_content">

                <TextView android:id="@+id/playerTwoName" style="@style/TableHeader" android:text="@string/player_two"/>
                <TextView android:id="@+id/playerTwoWins" style="@style/TableData" />
                <TextView android:id="@+id/playerTwoTies" style="@style/TableData" />
                <TextView android:id="@+id/playerTwoLoss" style="@style/TableData" />

            </TableRow>
        </TableLayout>


</LinearLayout>
